<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vinilos App</string>
    <string name="collector">Coleccionista</string>
    <string name="collectors">Coleccionistas</string>
    <string name="agregar_cancion">Agregar Canciones</string>
    <string name="visitor">Visitante</string>
    <string name="albums_title">Albumes</string>
    <string name="albums_new">Nuevo Album</string>
    <string name="tracks_new">Agregar Canción a Album:</string>
    <string name="logout">Salir</string>
    <string name="title_activity_scrolling_album_details" />
    <string name="songs">Pistas</string>
...
