...
            android:fitsSystemWindows="true"
            app:contentScrim="@color/primary"
            app:expandedTitleGravity="center"
            app:expandedTitleMarginBottom="64dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/bgAlbumImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
...
